fixed cropping on photo tiles

--- a/client/main.scss
+++ b/client/main.scss
@@ -483,6 +483,10 @@ p, li, span, h1, h2, h3, h4, h5, h6 {
   transform: translateY(-60%);
 }
 
+.photo-tiles-wrap img {
+  max-height: 450px;  /* the Cloudinary transformations should make them normally fit, so just keep this number within reason. */
+}
+
 
 /* "small" only */
 @media screen and (max-width: 39.9375em) {
